--- a/app/globals.css
+++ b/app/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body{
-    font-family: var(--font-noto-sans), "sans-serif";
+    font-family: var(--font-noto-serif), serif;
 }
